fixed gap in sections (firefox)
there was an unknown margin added in firefox. overwriting now.

--- a/css/data.less
+++ b/css/data.less
@@ -53,6 +53,7 @@ h2 {
   color:@color-highlightedgray;
   .noWebkitMargin;
   padding-top: 75px;
+  margin: 0px;
 }
 
 h3 {
